--- a/code/snowy/Chrome/snowy_v1.html
+++ b/code/snowy/Chrome/snowy_v1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
- Copyright © 2021, SAS Institute Inc., Cary, NC, USA.  All Rights Reserved.
- SPDX-License-Identifier: Apache-2.0
+    Developed by Sudheesh Warrier
+    Contact for any issues: Sudheesh.Warrier@sas.com
 -->
 <html>
 
