--- a/code/snowy/Chrome/snowy.html
+++ b/code/snowy/Chrome/snowy.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="jquery-3.5.1.min.js"></script>
     <script src="jsrsasign-all-min.js"></script>
     <script type="text/javascript" src="moment.js"></script>
+    <script type="text/javascript" src="pako.min.js"></script>
     <script src="snowy.js"></script>
 
 
